Bug 431624 - After new reflowing code, lines do not wrap
Summary: After new reflowing code, lines do not wrap
Status: VERIFIED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: general (other bugs)
Version First Reported In: master
Platform: Other Other
: NOR normal
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-01-15 01:40 UTC by Kurt Hindenburg
Modified: 2021-01-15 16:26 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
master example (92.63 KB, image/png)
2021-01-15 01:41 UTC, Kurt Hindenburg
Details
20.12 example (100.48 KB, image/png)
2021-01-15 01:42 UTC, Kurt Hindenburg
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Kurt Hindenburg 2021-01-15 01:40:32 UTC
After https://invent.kde.org/utilities/konsole/-/merge_requests/321, lines do not wrap.  Testing using grep/ack.
Comment 1 Kurt Hindenburg 2021-01-15 01:41:36 UTC
Created attachment 134873 [details]
master example
Comment 2 Kurt Hindenburg 2021-01-15 01:42:17 UTC
Created attachment 134874 [details]
20.12 example
Comment 3 Carlos Alves 2021-01-15 11:31:47 UTC
Does it happens when you scroll up to see the history?
Comment 4 tcanabrava 2021-01-15 12:20:58 UTC
For me it happens after I resize / scroll up to see history.
grep on the last line always works.
Comment 5 Bug Janitor Service 2021-01-15 12:27:46 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/konsole/-/merge_requests/328
Comment 6 Carlos Alves 2021-01-15 14:28:25 UTC
Git commit 0f8d4e0ca7dfaa4556faa58106b032ed97c20e01 by Carlos Alves.
Committed on 15/01/2021 at 12:27.
Pushed by hindenburg into branch 'master'.

Fix unlimited history reflow bug

It was joinning the reflowed lines in history but in compact history it
does reflow again. It will now just ignore it and add to history.

M  +14   -11   src/Screen.cpp

https://invent.kde.org/utilities/konsole/commit/0f8d4e0ca7dfaa4556faa58106b032ed97c20e01
Comment 7 Nate Graham 2021-01-15 16:26:21 UTC
Confirming the fix, thanks!