Fix unlimited history reflow bug

It was joinning the reflowed lines in history but in compact history it
does reflow again. It will now just ignore it and add to history.

BUG: 431624